# opengl_tutorial

./: CMakeLists.txt  README.md
doc/: opengl_start.md
inc/filesystem/: filesystem.h
inc/glad/: glad.h
inc/shader/: shader_s.h
inc/stb_image/: stb_image.h
src/: CMakeLists.txt
src/glad/: glad.c
src/opengl_demo/: opengl_test.cpp
src/opengl_triangle/: dynamic_color_triangle.cpp  gradual_color_triangle.cpp  multi_color_triangle.cpp  multi_triangle.cpp  multi_vertex_triangle.cpp  rectangle_demo.cpp  triangle_demo.cpp
src/opengl_window/: opengl_window_demo.cpp
src/shader_src/: shader_fs4.fs  shader_vs2.vs  shader_vs4.vs  texture_fs1.fs  texture_fs2.fs  texture_fs3.fs  texture_fs4.fs
src/shader_triangle/: shader_triangle_demo.cpp  shader_triangle_exercise1.cpp  shader_triangle_exercise2.cpp  shader_triangle_exercise3.cpp
src/stb_image/: stb_image.cpp
src/textures_demo/: texture_demo.cpp  texture_exercise1.cpp  texture_exercise2.cpp  texture_unit.cpp
